--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   list-style: none;
 }
 
-:root{
+:root {
   --black: hsl(240, 6%, 13%);
   --gray: hsla(240, 9%, 89%);
 }
@@ -21,35 +21,36 @@ body {
 body {
   display: grid;
   place-items: center;
+  background-color: #000;
 }
 
 main {
-  background-image: url('../images/background.png');
-  width: 375px;
-  height: 812px;
+  background: url('../images/background.svg') no-repeat center/cover;
+  width: 100%;
+  min-height: 812px;
+  height: 100vh;
 }
 
 .container {
   max-width: 250px;
   margin: 0 auto;
   text-align: center;
-
   color: var(--gray);
 }
 
-.avatar{
+.avatar {
   width: 10rem;
   margin: 11.5rem auto 0;
   position: relative;
 }
 
-.avatar span{
+.avatar span {
   position: absolute;
   z-index: 1;
   top: -15px;
 }
 
-.avatar > img{
+.avatar > img {
   width: 10rem;
   height: 11.5rem;
   object-fit: cover;
@@ -76,9 +77,64 @@ p {
   margin-top: 2rem;
 }
 
-ul{
+ul {
   margin-top: 4rem;
   display: flex;
   justify-content: center;
   gap: 0.5rem;
+}
+
+/* tablet */
+@media (min-width: 720px) {
+  .bg-gradient {
+    background: url('../images/background-gradient.svg') no-repeat top
+      center/contain;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+  }
+
+  .range::before{
+    content: "";
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: -149rem;
+    width: 4rem;
+    height: 150rem;
+    background-image: linear-gradient(161.24deg, #FF008E -15.25%, #FFCD1E 111.89%);
+    transform: translateX(-50%);
+  }
+
+  .range::after{
+    content: "";
+    width: 5rem;
+    height: .5rem;
+    background-color: #000;
+    position: absolute;
+    top: .8rem;
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  main {
+    background: url('../images/background-desktop.svg') no-repeat center/cover;
+    max-width: 22.375rem;
+    min-height: 33.75rem;
+    height: auto;
+    position: relative;
+    z-index: 1;
+    margin: 4rem 0;
+  }
+
+  .avatar {
+    margin: 4.5rem auto 0;
+  }
+
+  ul{
+    margin-bottom: 2rem;
+  }
+
 }
